Bug 164920 - UI: Arrows in the Arrow head dropdown are clipped (Windows and kf6)
Summary: UI: Arrows in the Arrow head dropdown are clipped (Windows and kf6)
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All All
: lowest trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:26.2.0 target:25.8.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-01-29 11:48 UTC by Telesto
Modified: 2025-12-16 08:17 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (13.95 KB, image/jpeg)
2025-01-29 11:48 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2025-01-29 11:48:10 UTC
Description:
Arrows in the Arrow head dropdown are clipped 

Steps to Reproduce:
1. Open Draw
2. Insert a Line
3. In the sidebar -> Click arrow drop down

Actual Results:
Arrow are not fully visible (clipped)

Expected Results:
Dropdown box should be wider


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 94afced0195ef824e575176e33c79ca57484cd5c
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: default; VCL: win
Locale: nl-NL (nl_NL); UI: nl-NL
Calc: threaded
Comment 1 Telesto 2025-01-29 11:48:29 UTC
Created attachment 198847 [details]
Screenshot
Comment 2 Buovjaga 2025-10-16 21:11:15 UTC
Not seen with gtk3 or gen.

This is not dependent on Sidebar, but also seen in the Line & Filling toolbar. The toolbar button became reused in the Sidebar with commit af71531ea292c62f785f8300205eddea8c2d33d2

The issue is an unbalance in the right hand arrows. They are 2 pixels too far to the right. This is an ancient thing. Before commit 46c0dbea12bd8329aa37ca5503db12b4162ef6c6 ("arrow list is scrolled") in 7.0, this did not lead to cropping pixels, because there was plenty of padding.
Comment 3 Caolán McNamara 2025-10-20 20:06:03 UTC
I think its the scrollbar width that matters here
Comment 4 Commit Notification 2025-10-21 07:33:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/25e08e4ea0df956f46bd7ef81493fcf5a5c1879c

Resolves: tdf#164920 add scrollbar width to desired size if enabled

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Buovjaga 2025-10-21 10:50:05 UTC
Looking nice now, thanks.

Arch Linux 64-bit
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 25e08e4ea0df956f46bd7ef81493fcf5a5c1879c
CPU threads: 8; OS: Linux 6.17; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 21 October 2025
Comment 6 Commit Notification 2025-10-22 09:53:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/b77b59adca898565b88b38a0d5b6b51fcda52f1b

Resolves: tdf#164920 add scrollbar width to desired size if enabled

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 jake stopher 2025-12-16 07:20:09 UTC Comment hidden (spam)