Resolves: tdf#164920 add scrollbar width to desired size if enabled

Change-Id: Ib6e354d5a4a9076b81e6a26fe78bdd4994024ec1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192755
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>